<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/keyboard"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:divider="@drawable/keyboard_divider"
    android:orientation="vertical"
    android:showDividers="beginning|middle|end">

        <TableRow style="@style/keyboard_row">

            <TextView
                android:id="@+id/t9_key_1"
                style="@style/keyboard_number_button"
                android:clickable="true"
                android:focusable="true"
                android:onClick="onClick"
                android:text="@string/number_one"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/t9_key_2"
                style="@style/keyboard_number_button"
                android:clickable="true"
                android:focusable="true"
                android:onClick="onClick"
                android:text="@string/number_two"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/t9_key_3"
                style="@style/keyboard_number_button"
                android:clickable="true"
                android:focusable="true"
                android:onClick="onClick"
                android:text="@string/number_three"
                android:textSize="24sp"
                android:textStyle="bold" />

        </TableRow>

        <TableRow style="@style/keyboard_row">

            <TextView
                android:id="@+id/t9_key_4"
                style="@style/keyboard_number_button"
                android:clickable="true"
                android:focusable="true"
                android:onClick="onClick"
                android:text="@string/number_four"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/t9_key_5"
                style="@style/keyboard_number_button"
                android:clickable="true"
                android:focusable="true"
                android:onClick="onClick"
                android:text="@string/number_five"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/t9_key_6"
                style="@style/keyboard_number_button"
                android:clickable="true"
                android:focusable="true"
                android:onClick="onClick"
                android:text="@string/number_six"
                android:textSize="24sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow style="@style/keyboard_row">

            <TextView
                android:id="@+id/t9_key_7"
                style="@style/keyboard_number_button"
                android:clickable="true"
                android:focusable="true"
                android:onClick="onClick"
                android:text="@string/number_seven"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/t9_key_8"
                style="@style/keyboard_number_button"
                android:clickable="true"
                android:focusable="true"
                android:onClick="onClick"
                android:text="@string/number_eight"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/t9_key_9"
                style="@style/keyboard_number_button"
                android:clickable="true"
                android:focusable="true"
                android:onClick="onClick"
                android:text="@string/number_nine"
                android:textSize="24sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow style="@style/keyboard_row">

            <TextView
                android:id="@+id/t9_key_backspace"
                style="@style/keyboard_button"
                android:clickable="true"
                android:focusable="true"
                android:onClick="onClick"
                android:text="@string/btn_backspace"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/t9_key_0"
                style="@style/keyboard_number_button"
                android:clickable="true"
                android:focusable="true"
                android:onClick="onClick"
                android:text="@string/number_zero"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/t9_key_enter"
                style="@style/keyboard_button"
                android:clickable="true"
                android:focusable="true"
                android:onClick="onClick"
                android:text="@string/btn_Enter"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#000000"
                android:textSize="24sp"
                android:textStyle="bold" />

        </TableRow>
</TableLayout>